Replace nl2br + bind-html to .with-new-line css class to avoid http://stackoverflow.com/questions/22533491/angularjs-how-can-i-ignore-certain-html-tags

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,7 @@
 html, body {
   height: 100%;
 }
+
+.with-newline {
+  white-space:pre-wrap;
+}
